--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(bogo-csv-editor C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(bogo-csv-editor main.c)
+add_executable(bogo-csv-editor main.c source/client.c source/client.h)
